feat: finalize Vitae.ai branding and AI features

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -151,7 +151,7 @@
     "viewLess": "عرض أقل"
   },
   "metadata": {
-    "title": "Martin Bundy | المحفظة",
-    "description": "محفظة Martin Bundy - طالب هندسة صناعية وفني متقدم في الذكاء الاصطناعي."
+    "title": "Vitae.ai | Martin Bundy - AI Digital CV",
+    "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   }
 }
