--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -151,7 +151,7 @@
     "viewLess": "Weniger anzeigen"
   },
   "metadata": {
-    "title": "Martin Bundy | Portfolio",
-    "description": "Portfolio von Martin Bundy - Student der Wirtschaftsingenieurwissenschaften und KI-Techniker."
+    "title": "Vitae.ai | Martin Bundy - Digitaler KI-Lebenslauf",
+    "description": "Vitae.ai - Interaktiver KI-gestutzter Lebenslauf von Martin Bundy mit Insights, Empfehlungen und smartem Chat."
   }
 }
