--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -151,7 +151,7 @@
     "viewLess": "View less"
   },
   "metadata": {
-    "title": "Martin Bundy | Portfolio",
-    "description": "Martin Bundy's Portfolio - Industrial Engineering Student and AI Technical Specialist. Specialized in Machine Learning, Deep Learning, and AI solutions."
+    "title": "Vitae.ai | Martin Bundy - AI-Powered Digital CV",
+    "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with career insights, recommendations, and smart chat."
   }
 }
