--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -151,7 +151,7 @@
     "viewLess": "Ver menos"
   },
   "metadata": {
-    "title": "Martin Bundy | Portfolio",
-    "description": "Portfolio de Martin Bundy - Estudiante de Ingenieria Industrial y Tecnico Superior en Inteligencia Artificial. Especializado en Machine Learning, Deep Learning y soluciones de IA."
+    "title": "Vitae.ai | Martin Bundy - CV Digital con IA",
+    "description": "Vitae.ai - Tu carrera, potenciada por inteligencia artificial. CV digital interactivo de Martin Bundy con analisis de IA, recomendaciones personalizadas y chat inteligente."
   }
 }
