--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -151,7 +151,7 @@
     "viewLess": "Voir moins"
   },
   "metadata": {
-    "title": "Martin Bundy | Portfolio",
-    "description": "Portfolio de Martin Bundy - Etudiant en Genie Industriel et Technicien Superieur en Intelligence Artificielle."
+    "title": "Vitae.ai | Martin Bundy - CV Numerique IA",
+    "description": "Vitae.ai - CV numerique interactif de Martin Bundy avec analyses, recommandations et chat intelligent."
   }
 }
