--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -151,7 +151,7 @@
     "viewLess": "कम देखें"
   },
   "metadata": {
-    "title": "Martin Bundy | पोर्टफोलियो",
-    "description": "Martin Bundy का पोर्टफोलियो - औद्योगिक इंजीनियरिंग छात्र और AI वरिष्ठ तकनीशियन।"
+    "title": "Vitae.ai | Martin Bundy - AI Digital CV",
+    "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   }
 }
