--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -151,7 +151,7 @@
     "viewLess": "閉じる"
   },
   "metadata": {
-    "title": "Martin Bundy | ポートフォリオ",
-    "description": "Martin Bundyのポートフォリオ - 産業工学学生およびAI上級技術者。"
+    "title": "Vitae.ai | Martin Bundy - AI Digital CV",
+    "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   }
 }
