--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -151,7 +151,7 @@
     "viewLess": "Ver menos"
   },
   "metadata": {
-    "title": "Martin Bundy | Portfolio",
-    "description": "Portfolio de Martin Bundy - Estudante de Engenharia Industrial e Tecnico Superior em Inteligencia Artificial."
+    "title": "Vitae.ai | Martin Bundy - CV Digital com IA",
+    "description": "Vitae.ai - CV digital interativo com IA de Martin Bundy, com analises, recomendacoes e chat inteligente."
   }
 }
