--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -151,7 +151,7 @@
     "viewLess": "收起"
   },
   "metadata": {
-    "title": "Martin Bundy | 作品集",
-    "description": "Martin Bundy的作品集 - 工业工程学生和人工智能高级技术员。"
+    "title": "Vitae.ai | Martin Bundy - AI Digital CV",
+    "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   }
 }
