--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -151,7 +151,7 @@
     "viewLess": "접기"
   },
   "metadata": {
-    "title": "Martin Bundy | 포트폴리오",
-    "description": "Martin Bundy의 포트폴리오 - 산업공학 학생 및 AI 고급 기술자."
+    "title": "Vitae.ai | Martin Bundy - AI Digital CV",
+    "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
   }
 }
